--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blood-donor",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "http://blood-donation.surge.sh",
   "dependencies": {
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
@@ -21,7 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "surgedeploy": "react-scripts build && cp build/index.html build/200.html"
   },
   "eslintConfig": {
     "extends": "react-app"
